--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Starter Template for Bootstrap</title>
-
     <!-- ADD BOOTSTRAP CORE HERE!!!! -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <title>Bootstrap funs!</title>
+<link rel=”stylesheet”
+
+href=”https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css” crossorigin=”anonymus”>
 
     <!-- Custom styles for this template -->
     <link href="css/styles.css" rel="stylesheet">
@@ -40,27 +43,82 @@
     <main role="main" class="container">
 
       <div class="starter-template">
-        <h1>Bootstrap starter template</h1>
-        <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+        <h1>Landscape Rocks!</h1>
+        <p class="lead">Welcome to my world of landscape snapshots from my numerous travels. I can't deny my love for nature, it is truly breathtaking.<br> All I needed for this project was a camera, some good lighting and a sense of adventure. Come with me on this wild ride.</p>
       </div>
+
+      <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="d-block w-100" src="images/img4.jpeg" alt="First slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="images/img5.jpg" alt="Second slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="images/img6.jpg" alt="Third slide">
+          </div>
+        </div>
+      </div>
+
 
       <!-- columns -->
       <div class="row">
         <div class="col-sm">
           <!-- add an image here -->
-          One of three columns
+
+          Hills
+          <img src="images/img2.jpg" alt="local image" width="350px" height="300px">
+
         </div>
         <div class="col-sm">
           <!-- add an image here -->
-          One of three columns
+
+          Water
+          <img src="images/img1.jpeg" alt="local image" width="350px" height="300px">
+
         </div>
         <div class="col-sm">
           <!-- add an image here -->
-          One of three columns
+
+          Savannah
+          <img src="images/img3.jpg" alt="local image" width="350px" height="300px">
         </div>
       </div>
-      
+
+
       <!-- Add another row here -->
+
+      <div class="contrast">
+        <div class="row">
+        <div class="col-sm">
+          <p> I love landscape pictures because you can never go wrong with them!
+          Here you can see a picture of a tree, the hill and a dock.</p>
+        </div>
+        <div class="col-sm">
+      </div>
+
+      <div class="modal" tabindex="-1" role="dialog">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Modal title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p>You are awesome.</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
     </main><!-- /.container -->
 
     <!-- Bootstrap core JavaScript
